--- a/dev/index.html
+++ b/dev/index.html
@@ -3,8 +3,18 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <!-- bower:css -->
+    <!-- endinject -->
+    <!-- inject:css -->
+    <!-- endinject -->
 </head>
-<body>
-
+<body ng-app="">
+    <div ng-view=""></div>
+    <!-- bower:js -->
+    <!-- endinject -->
+    <!-- inject:js -->
+    <!-- endinject -->
+    <!-- templates:js -->
+    <!-- endinject -->
 </body>
 </html>
