--- a/dev/index.html
+++ b/dev/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
+<head lang="es">
+    <base href="/">
     <meta charset="UTF-8">
+    <title>PULGUITAZ</title>
+    <link href="http://fonts.googleapis.com/css?family=Raleway:400,200" rel="stylesheet" type="text/css">
     <title></title>
     <!-- bower:css -->
     <!-- endinject -->
     <!-- inject:css -->
     <!-- endinject -->
 </head>
-<body ng-app="">
-    <div ng-view=""></div>
+<body ng-app="pulguitaz">
+    <div ui-view=""></div>
     <!-- bower:js -->
     <!-- endinject -->
     <!-- inject:js -->
